SERVER-26945 ReplSource::resyncDrop should not assume database name obtained from listDatabases result exists locally